Apps/whoogle/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoogle
  name: whoogle-service
  namespace: whoogle
spec:
  ports:
    - name: "3001"
      port: 80
      targetPort: 5000
  selector:
    app: whoogle
